in this version i fix tha imagines

--- a/about.html
+++ b/about.html
@@ -45,7 +45,9 @@
                  </ol>
         </section>
     </main>
-    <button id="green">green-button</button>
+    
+    <!-- <button id="green">green-button</button> -->
+    <button><a href="index.html">Home</a></button>
 
     <footer class='centered'>
         Connect with me on 
