--- a/my_business.html
+++ b/my_business.html
@@ -66,7 +66,7 @@
     <footer class='centered'>
         Connect with me on 
         
-        <a href="https://www.linkedin.com/feed/" target="_blank"><img height="25" src="linkedinlogo.png"/>
+        <a href="https://www.linkedin.com/in/renata-anaya-12399457/" target="_blank"><img height="25" src="linkedinlogo.png"/>
         </a>
     </footer>
  
