addigting tag blank

--- a/my_business.html
+++ b/my_business.html
@@ -29,7 +29,7 @@
 
                 <div class="info-product">
                 <h2>Peter Pan Catalogo</h2>
-                <a href="https://colaboradoras.pe/virtual/lenceria2024-1A/">
+                <a href="https://colaboradoras.pe/virtual/lenceria2024-1A/" target="blank">
                     <button>Catalogue here</button>
                 </a>
 
@@ -45,7 +45,7 @@
                 </figure>
                 <div class="info-product">
                     <h2>Queriendote Catalogo</h2>
-                    <a href="https://www.flipsnack.com/BE6EAE88B7A/catalogo-queriendote-2024-1/full-view.html">
+                    <a href="https://www.flipsnack.com/BE6EAE88B7A/catalogo-queriendote-2024-1/full-view.html" target="blank"> 
                         <button>Catalogue here</button>
                     </a>
                 </div>
@@ -66,7 +66,7 @@
     <footer class='centered'>
         Connect with me on 
         
-        <a href="https://www.linkedin.com/in/renata-anaya-12399457/" target="_blank"><img height="25" src="linkedinlogo.png"/>
+        <a href="https://www.linkedin.com/in/renata-anaya-12399457/" target="blank"><img height="25" src="linkedinlogo.png"/>
         </a>
     </footer>
  
