change about me

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
         <section>
             <h2>About</h2>
             <p>
-            Born in Perú, raised in Lima, Lima is my hometown. I'm Business Administration. I live in Provo  
+                I was born in Peru and grew up in Lima, which is my hometown. I am a business administrator, single, and have no children. I arrived in the United States on July 16, 2021. My dream is to create my own e-commerce business, and currently, I live in Provo.  
             </p>  
         </section>
         <section>
