change my bussines

--- a/my_business.html
+++ b/my_business.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="styless.css" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="index.js"></script>
         <title> Renata Anaya </title>
     </head>
 
@@ -24,7 +25,7 @@
         <div class="container-items">   
             <div class="item">
                 <figure> 
-                    <img src="Peter-Pan-Catalogo.jpg" alt="product"/>
+                    <img height="400"src="Peter-Pan-Catalogo.jpg" alt="product"/>
                 </figure>
 
                 <div class="info-product">
@@ -39,19 +40,17 @@
         <div class="container-items">
             <div class="item">
                 <figure> 
-                    <img 
-                    src="queriendote-catalogo.jpg" 
+                    <img height="400"src="queriendote-catalogo.jpg" 
                     alt="product"/>
                 </figure>
                 <div class="info-product">
                     <h2>Queriendote Catalogo</h2>
-                    <a href="https://www.flipsnack.com/BE6EAE88B7A/catalogo-queriendote-2024-1/full-view.html" target="blank"> 
+                    <a href="https://online.fliphtml5.com/hbxxw/glbi/#p=1" target="blank"> 
                         <button>Catalogue here</button>
                     </a>
                 </div>
             </div>
         </div>
-        <script src="index.js"></script>
     </body>
 
 <br>
@@ -68,6 +67,7 @@
         
         <a href="https://www.linkedin.com/in/renata-anaya-12399457/" target="blank"><img height="25" src="linkedinlogo.png"/>
         </a>
+          <!-- Any HTML here worksm fine. The confetti is overlayed. -->
     </footer>
  
    
